shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmTooManyRequestsException.kt
package com.example.osmapi.core.common.errors

class OsmTooManyRequestsException(
    errorCode: Int = 0,
    errorTitle: String = "",
    description: String = ""
) : OsmConnectionException(errorCode, errorTitle, description)
